# cli-diary

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/: dependabot.yml
.github/workflows/: rust.yml
src/diary/: config.rs  errors.rs  lib.rs  ops.rs  utils.rs
src/diary/diary_file/: mod.rs
src/diary/entry/: mod.rs
src/diary/ops/: add.rs  commit.rs  init.rs  mod.rs  new.rs  open.rs
src/diary/utils/: date.rs  editing.rs  file_system.rs  git.rs
tests/: add.rs  cli.rs  commits.rs  init.rs  new.rs  open.rs  utils.rs
