[package]
authors = ["Ben Gale <bengale2007@googlemail.com>"]
name = "cli-diary"
categories = ["command-line-utilities"]
description = "A CLI based diary tool for adding entries on the fly."
keywords = ["diary"]
readme = "./README.md"
repository = "https://github.com/BenGale93/cli-diary"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "diary"
path = "src/bin/diary/main.rs"

[lib]
name = "diary"
path = "src/diary/lib.rs"

[dependencies]
clap = "2.33.3"
chrono = "0.4.19"
edit = "0.1.3"
anyhow = "1.0.44"
confy = "0.4.0"
serde_derive = "1.0.130"
serde = "1.0.130"