[package]
authors = ["Ben Gale <bengale2007@googlemail.com>"]
name = "cli-diary"
categories = ["command-line-utilities"]
description = "A CLI based diary tool for adding entries on the fly."
keywords = ["diary"]
readme = "./README.md"
repository = "https://github.com/BenGale93/cli-diary"
version = "0.5.0-dev"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "diary"
path = "src/bin/diary/main.rs"

[lib]
name = "diary"
path = "src/diary/lib.rs"

[dependencies]
clap = "3.0.7"
chrono = "0.4.19"
edit = "0.1.3"
anyhow = "1.0.52"
confy = "0.4.0"
serde_derive = "1.0.133"
serde = "1.0.133"
thiserror = "1.0.30"
git2 = "0.13.25"
enum_dispatch = "0.3.7"

[dev-dependencies]
tempfile = "3.3.0"
assert_cmd = "2.0"
predicates = "2.1"
